k8s/traefik-v2/demo/tcp.yaml
# deploy.yaml 添加
# - name: mongo
#   hostPort: 27017
#   containerPort: 27017
# - --entryPoints.mongo.address=:27017
apiVersion: v1
kind: Endpoints
metadata:
  name: mongo-production
subsets:
  - addresses:
      - ip: 192.168.1.25
    ports:
      - port: 27017

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mongo-traefik-tcp
spec:
  entryPoints:
    - mongo
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mongo-production
          port: 27017
